sdk/netapp/arm-netapp/samples/v21/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                     | **Description**                                                                                                                                                                                                                                                                                                                                                                      |
| ------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [accountsChangeKeyVaultSample.js][accountschangekeyvaultsample]                                   | Affects existing volumes that are encrypted with Key Vault/Managed HSM, and new volumes. Supports HSM to Key Vault, Key Vault to HSM, HSM to HSM and Key Vault to Key Vault. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Accounts_ChangeKeyVault.json                                                                      |
| [accountsCreateOrUpdateSample.js][accountscreateorupdatesample]                                   | Create or update the specified NetApp account within the resource group x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Accounts_CreateOrUpdate.json                                                                                                                                                                           |
| [accountsDeleteSample.js][accountsdeletesample]                                                   | Delete the specified NetApp account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Accounts_Delete.json                                                                                                                                                                                                                       |
| [accountsGetChangeKeyVaultInformationSample.js][accountsgetchangekeyvaultinformationsample]       | Contains data from encryption.keyVaultProperties as well as information about which private endpoint is used by each encryption sibling set. Response from this endpoint can be modified and used as request body for POST request. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Accounts_GetChangeKeyVaultInformation.json |
| [accountsGetSample.js][accountsgetsample]                                                         | Get the NetApp account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Accounts_Get.json                                                                                                                                                                                                                                       |
| [accountsListBySubscriptionSample.js][accountslistbysubscriptionsample]                           | List and describe all NetApp accounts in the subscription. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Accounts_List.json                                                                                                                                                                                                  |
| [accountsListSample.js][accountslistsample]                                                       | List and describe all NetApp accounts in the resource group. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Accounts_List.json                                                                                                                                                                                                |
| [accountsRenewCredentialsSample.js][accountsrenewcredentialssample]                               | Renew identity credentials that are used to authenticate to key vault, for customer-managed key encryption. If encryption.identity.principalId does not match identity.principalId, running this operation will fix it. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Accounts_RenewCredentials.json                         |
| [accountsTransitionToCmkSample.js][accountstransitiontocmksample]                                 | Transitions all volumes in a VNet to a different encryption key source (Microsoft-managed key or Azure Key Vault). Operation fails if targeted volumes share encryption sibling set with volumes from another account. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Accounts_TransitionEncryptionKey.json                   |
| [accountsUpdateSample.js][accountsupdatesample]                                                   | Patch the specified NetApp account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Accounts_Update.json                                                                                                                                                                                                                        |
| [backupPoliciesCreateSample.js][backuppoliciescreatesample]                                       | Create a backup policy for Netapp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupPolicies_Create.json                                                                                                                                                                                                           |
| [backupPoliciesDeleteSample.js][backuppoliciesdeletesample]                                       | Delete backup policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupPolicies_Delete.json                                                                                                                                                                                                                                |
| [backupPoliciesGetSample.js][backuppoliciesgetsample]                                             | Get a particular backup Policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupPolicies_Get.json                                                                                                                                                                                                                         |
| [backupPoliciesListSample.js][backuppolicieslistsample]                                           | List backup policies for Netapp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupPolicies_List.json                                                                                                                                                                                                               |
| [backupPoliciesUpdateSample.js][backuppoliciesupdatesample]                                       | Patch a backup policy for Netapp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupPolicies_Update.json                                                                                                                                                                                                            |
| [backupVaultsCreateOrUpdateSample.js][backupvaultscreateorupdatesample]                           | Create or update the specified Backup Vault in the NetApp account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupVaults_Create.json                                                                                                                                                                                     |
| [backupVaultsDeleteSample.js][backupvaultsdeletesample]                                           | Delete the specified Backup Vault x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupVaults_Delete.json                                                                                                                                                                                                                     |
| [backupVaultsGetSample.js][backupvaultsgetsample]                                                 | Get the Backup Vault x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupVaults_Get.json                                                                                                                                                                                                                                     |
| [backupVaultsListByNetAppAccountSample.js][backupvaultslistbynetappaccountsample]                 | List and describe all Backup Vaults in the NetApp account. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupVaults_List.json                                                                                                                                                                                              |
| [backupVaultsUpdateSample.js][backupvaultsupdatesample]                                           | Patch the specified NetApp Backup Vault x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupVaults_Update.json                                                                                                                                                                                                               |
| [backupsCreateSample.js][backupscreatesample]                                                     | Create a backup under the Backup Vault x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupsUnderBackupVault_Create.json                                                                                                                                                                                                     |
| [backupsDeleteSample.js][backupsdeletesample]                                                     | Delete a Backup under the Backup Vault x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupsUnderBackupVault_Delete.json                                                                                                                                                                                                     |
| [backupsGetLatestStatusSample.js][backupsgetlateststatussample]                                   | Get the latest status of the backup for a volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_LatestBackupStatus.json                                                                                                                                                                                               |
| [backupsGetSample.js][backupsgetsample]                                                           | Get the specified Backup under Backup Vault. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupsUnderBackupVault_Get.json                                                                                                                                                                                                  |
| [backupsGetVolumeLatestRestoreStatusSample.js][backupsgetvolumelatestrestorestatussample]         | Get the latest status of the restore for a volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_LatestRestoreStatus.json                                                                                                                                                                                             |
| [backupsListByVaultSample.js][backupslistbyvaultsample]                                           | List all backups Under a Backup Vault x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupsUnderBackupVault_List.json                                                                                                                                                                                                        |
| [backupsUnderAccountMigrateBackupsSample.js][backupsunderaccountmigratebackupssample]             | Migrate the backups under a NetApp account to backup vault x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupsUnderAccount_Migrate.json                                                                                                                                                                                    |
| [backupsUnderBackupVaultRestoreFilesSample.js][backupsunderbackupvaultrestorefilessample]         | Restore the specified files from the specified backup to the active filesystem x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupsUnderBackupVault_SingleFileRestore.json                                                                                                                                                  |
| [backupsUnderVolumeMigrateBackupsSample.js][backupsundervolumemigratebackupssample]               | Migrate the backups under volume to backup vault x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupsUnderVolume_Migrate.json                                                                                                                                                                                               |
| [backupsUpdateSample.js][backupsupdatesample]                                                     | Patch a Backup under the Backup Vault x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/BackupsUnderBackupVault_Update.json                                                                                                                                                                                                      |
| [bucketsCreateOrUpdateSample.js][bucketscreateorupdatesample]                                     | Creates or updates a bucket for a volume. A bucket allows additional services, such as AI services, connect to the volume data contained in those buckets. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-01-01-preview/examples/Buckets_CreateOrUpdate.json                                                                                |
| [bucketsDeleteSample.js][bucketsdeletesample]                                                     | Delete a volume's bucket. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-01-01-preview/examples/Buckets_Delete.json                                                                                                                                                                                                                         |
| [bucketsGenerateCredentialsSample.js][bucketsgeneratecredentialssample]                           | Generate the access key and secret key used for accessing the specified volume bucket. Also return expiry date and time of key pair (in UTC). x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-01-01-preview/examples/Buckets_GenerateCredentials.json                                                                                        |
| [bucketsGetSample.js][bucketsgetsample]                                                           | Get the details of the specified volume's bucket. A bucket allows additional services, such as AI services, connect to the volume data contained in those buckets. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-01-01-preview/examples/Buckets_Get.json                                                                                   |
| [bucketsListSample.js][bucketslistsample]                                                         | Describes all buckets belonging to a volume. Buckets allow additional services, such as AI services, connect to the volume data contained in those buckets. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-01-01-preview/examples/Buckets_List.json                                                                                         |
| [bucketsUpdateSample.js][bucketsupdatesample]                                                     | Updates the details of a volume bucket. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-01-01-preview/examples/Buckets_Update.json                                                                                                                                                                                                           |
| [netAppResourceCheckFilePathAvailabilitySample.js][netappresourcecheckfilepathavailabilitysample] | Check if a file path is available. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/CheckFilePathAvailability.json                                                                                                                                                                                                              |
| [netAppResourceCheckNameAvailabilitySample.js][netappresourcechecknameavailabilitysample]         | Check if a resource name is available. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/CheckNameAvailability.json                                                                                                                                                                                                              |
| [netAppResourceCheckQuotaAvailabilitySample.js][netappresourcecheckquotaavailabilitysample]       | Check if a quota is available. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/CheckQuotaAvailability.json                                                                                                                                                                                                                     |
| [netAppResourceQueryNetworkSiblingSetSample.js][netappresourcequerynetworksiblingsetsample]       | Get details of the specified network sibling set. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/NetworkSiblingSet_Query.json                                                                                                                                                                                                 |
| [netAppResourceQueryRegionInfoSample.js][netappresourcequeryregioninfosample]                     | Provides storage to network proximity and logical zone mapping information. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/RegionInfo.json                                                                                                                                                                                    |
| [netAppResourceQuotaLimitsAccountGetSample.js][netappresourcequotalimitsaccountgetsample]         | Get the default, current and usages account quota limit x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-01-01-preview/examples/QuotaLimitsAccount_Get.json                                                                                                                                                                                   |
| [netAppResourceQuotaLimitsAccountListSample.js][netappresourcequotalimitsaccountlistsample]       | Gets a list of quota limits for all quotas that are under account. Currently PoolsPerAccount is the only one. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-01-01-preview/examples/QuotaLimitsAccount_List.json                                                                                                                            |
| [netAppResourceQuotaLimitsGetSample.js][netappresourcequotalimitsgetsample]                       | Get the default and current subscription quota limit x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/QuotaLimits_Get.json                                                                                                                                                                                                      |
| [netAppResourceQuotaLimitsListSample.js][netappresourcequotalimitslistsample]                     | Get the default and current limits for quotas x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/QuotaLimits_List.json                                                                                                                                                                                                            |
| [netAppResourceRegionInfosGetSample.js][netappresourceregioninfosgetsample]                       | Provides storage to network proximity and logical zone mapping information. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/RegionInfos_Get.json                                                                                                                                                                               |
| [netAppResourceRegionInfosListSample.js][netappresourceregioninfoslistsample]                     | Provides region specific information. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/RegionInfos_List.json                                                                                                                                                                                                                    |
| [netAppResourceUpdateNetworkSiblingSetSample.js][netappresourceupdatenetworksiblingsetsample]     | Update the network features of the specified network sibling set. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/NetworkSiblingSet_Update.json                                                                                                                                                                                |
| [netAppResourceUsagesGetSample.js][netappresourceusagesgetsample]                                 | Get current subscription usage of the specific type x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Usages_Get.json                                                                                                                                                                                                            |
| [netAppResourceUsagesListSample.js][netappresourceusageslistsample]                               | Get current subscription usages x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Usages_List.json                                                                                                                                                                                                                               |
| [operationsListSample.js][operationslistsample]                                                   | Lists all of the available Microsoft.NetApp Rest API operations x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/OperationList.json                                                                                                                                                                                             |
| [poolsCreateOrUpdateSample.js][poolscreateorupdatesample]                                         | Create or Update a capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Pools_CreateOrUpdate.json                                                                                                                                                                                                                     |
| [poolsDeleteSample.js][poolsdeletesample]                                                         | Delete the specified capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Pools_Delete.json                                                                                                                                                                                                                           |
| [poolsGetSample.js][poolsgetsample]                                                               | Get details of the specified capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Pools_Get.json                                                                                                                                                                                                                      |
| [poolsListSample.js][poolslistsample]                                                             | List all capacity pools in the NetApp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Pools_List.json                                                                                                                                                                                                                  |
| [poolsUpdateSample.js][poolsupdatesample]                                                         | Patch the specified capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Pools_Update.json                                                                                                                                                                                                                            |
| [snapshotPoliciesCreateSample.js][snapshotpoliciescreatesample]                                   | Create a snapshot policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/SnapshotPolicies_Create.json                                                                                                                                                                                                                          |
| [snapshotPoliciesDeleteSample.js][snapshotpoliciesdeletesample]                                   | Delete snapshot policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/SnapshotPolicies_Delete.json                                                                                                                                                                                                                            |
| [snapshotPoliciesGetSample.js][snapshotpoliciesgetsample]                                         | Get a snapshot Policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/SnapshotPolicies_Get.json                                                                                                                                                                                                                                |
| [snapshotPoliciesListSample.js][snapshotpolicieslistsample]                                       | List snapshot policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/SnapshotPolicies_List.json                                                                                                                                                                                                                                |
| [snapshotPoliciesListVolumesSample.js][snapshotpolicieslistvolumessample]                         | Get volumes associated with snapshot policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/SnapshotPolicies_ListVolumes.json                                                                                                                                                                                                  |
| [snapshotPoliciesUpdateSample.js][snapshotpoliciesupdatesample]                                   | Patch a snapshot policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/SnapshotPolicies_Update.json                                                                                                                                                                                                                           |
| [snapshotsCreateSample.js][snapshotscreatesample]                                                 | Create the specified snapshot within the given volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Snapshots_Create.json                                                                                                                                                                                                    |
| [snapshotsDeleteSample.js][snapshotsdeletesample]                                                 | Delete snapshot x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Snapshots_Delete.json                                                                                                                                                                                                                                          |
| [snapshotsGetSample.js][snapshotsgetsample]                                                       | Get details of the specified snapshot x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Snapshots_Get.json                                                                                                                                                                                                                       |
| [snapshotsListSample.js][snapshotslistsample]                                                     | List all snapshots associated with the volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Snapshots_List.json                                                                                                                                                                                                              |
| [snapshotsRestoreFilesSample.js][snapshotsrestorefilessample]                                     | Restore the specified files from the specified snapshot to the active filesystem x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Snapshots_SingleFileRestore.json                                                                                                                                                              |
| [snapshotsUpdateSample.js][snapshotsupdatesample]                                                 | Patch a snapshot x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Snapshots_Update.json                                                                                                                                                                                                                                         |
| [subvolumesCreateSample.js][subvolumescreatesample]                                               | Creates a subvolume in the path or clones the subvolume mentioned in the parentPath x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Subvolumes_Create.json                                                                                                                                                                     |
| [subvolumesDeleteSample.js][subvolumesdeletesample]                                               | Delete subvolume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Subvolumes_Delete.json                                                                                                                                                                                                                                        |
| [subvolumesGetMetadataSample.js][subvolumesgetmetadatasample]                                     | Get details of the specified subvolume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Subvolumes_Metadata.json                                                                                                                                                                                                                |
| [subvolumesGetSample.js][subvolumesgetsample]                                                     | Returns the path associated with the subvolumeName provided x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Subvolumes_Get.json                                                                                                                                                                                                |
| [subvolumesListByVolumeSample.js][subvolumeslistbyvolumesample]                                   | Returns a list of the subvolumes in the volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Subvolumes_List.json                                                                                                                                                                                                            |
| [subvolumesUpdateSample.js][subvolumesupdatesample]                                               | Patch a subvolume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Subvolumes_Update.json                                                                                                                                                                                                                                       |
| [volumeGroupsCreateSample.js][volumegroupscreatesample]                                           | Create a volume group along with specified volumes x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/VolumeGroups_Create_Oracle.json                                                                                                                                                                                             |
| [volumeGroupsDeleteSample.js][volumegroupsdeletesample]                                           | Delete the specified volume group only if there are no volumes under volume group. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/VolumeGroups_Delete.json                                                                                                                                                                    |
| [volumeGroupsGetSample.js][volumegroupsgetsample]                                                 | Get details of the specified volume group x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/VolumeGroups_Get_Oracle.json                                                                                                                                                                                                         |
| [volumeGroupsListByNetAppAccountSample.js][volumegroupslistbynetappaccountsample]                 | List all volume groups for given account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/VolumeGroups_List_Oracle.json                                                                                                                                                                                                         |
| [volumeQuotaRulesCreateSample.js][volumequotarulescreatesample]                                   | Create the specified quota rule within the given volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/VolumeQuotaRules_Create.json                                                                                                                                                                                           |
| [volumeQuotaRulesDeleteSample.js][volumequotarulesdeletesample]                                   | Delete quota rule x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/VolumeQuotaRules_Delete.json                                                                                                                                                                                                                                 |
| [volumeQuotaRulesGetSample.js][volumequotarulesgetsample]                                         | Get details of the specified quota rule x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/VolumeQuotaRules_Get.json                                                                                                                                                                                                              |
| [volumeQuotaRulesListByVolumeSample.js][volumequotaruleslistbyvolumesample]                       | List all quota rules associated with the volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/VolumeQuotaRules_List.json                                                                                                                                                                                                     |
| [volumeQuotaRulesUpdateSample.js][volumequotarulesupdatesample]                                   | Patch a quota rule x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/VolumeQuotaRules_Update.json                                                                                                                                                                                                                                |
| [volumesAuthorizeExternalReplicationSample.js][volumesauthorizeexternalreplicationsample]         | Starts SVM peering and returns a command to be run on the external ONTAP to accept it. Once the SVM have been peered a SnapMirror will be created x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_AuthorizeExternalReplication.json                                                                                    |
| [volumesAuthorizeReplicationSample.js][volumesauthorizereplicationsample]                         | Authorize the replication connection on the source volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_AuthorizeReplication.json                                                                                                                                                                                    |
| [volumesBreakFileLocksSample.js][volumesbreakfilelockssample]                                     | Break all the file locks on a volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_BreakFileLocks.json                                                                                                                                                                                                               |
| [volumesBreakReplicationSample.js][volumesbreakreplicationsample]                                 | Break the replication connection on the destination volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_BreakReplication.json                                                                                                                                                                                       |
| [volumesCreateOrUpdateSample.js][volumescreateorupdatesample]                                     | Create or update the specified volume within the capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_CreateOrUpdate.json                                                                                                                                                                                     |
| [volumesDeleteReplicationSample.js][volumesdeletereplicationsample]                               | Delete the replication connection on the destination volume, and send release to the source replication x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_DeleteReplication.json                                                                                                                                         |
| [volumesDeleteSample.js][volumesdeletesample]                                                     | Delete the specified volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_Delete.json                                                                                                                                                                                                                                |
| [volumesFinalizeExternalReplicationSample.js][volumesfinalizeexternalreplicationsample]           | Finalizes the migration of an external volume by releasing the replication and breaking the external cluster peering if no other migration is active. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_FinalizeExternalReplication.json                                                                                 |
| [volumesFinalizeRelocationSample.js][volumesfinalizerelocationsample]                             | Finalizes the relocation of the volume and cleans up the old volume. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_FinalizeRelocation.json                                                                                                                                                                           |
| [volumesGetSample.js][volumesgetsample]                                                           | Get the details of the specified volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_Get.json                                                                                                                                                                                                                       |
| [volumesListGetGroupIdListForLdapUserSample.js][volumeslistgetgroupidlistforldapusersample]       | Returns the list of group Ids for a specific LDAP User x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/GroupIdListForLDAPUser.json                                                                                                                                                                                             |
| [volumesListQuotaReportSample.js][volumeslistquotareportsample]                                   | Returns report of quotas for the volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-01-01-preview/examples/Volumes_ListQuotaReport.json                                                                                                                                                                                                  |
| [volumesListReplicationsSample.js][volumeslistreplicationssample]                                 | List all replications for a specified volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_ListReplications.json                                                                                                                                                                                                     |
| [volumesListSample.js][volumeslistsample]                                                         | List all volumes within the capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_List.json                                                                                                                                                                                                                    |
| [volumesPeerExternalClusterSample.js][volumespeerexternalclustersample]                           | Starts peering the external cluster for this migration volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_PeerExternalCluster.json                                                                                                                                                                                 |
| [volumesPerformReplicationTransferSample.js][volumesperformreplicationtransfersample]             | Performs an adhoc replication transfer on a volume with volumeType Migration x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_PerformReplicationTransfer.json                                                                                                                                                           |
| [volumesPoolChangeSample.js][volumespoolchangesample]                                             | Moves volume to another pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_PoolChange.json                                                                                                                                                                                                                           |
| [volumesPopulateAvailabilityZoneSample.js][volumespopulateavailabilityzonesample]                 | This operation will populate availability zone information for a volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_PopulateAvailabilityZones.json                                                                                                                                                                 |
| [volumesReInitializeReplicationSample.js][volumesreinitializereplicationsample]                   | Re-Initializes the replication connection on the destination volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_ReInitializeReplication.json                                                                                                                                                                       |
| [volumesReestablishReplicationSample.js][volumesreestablishreplicationsample]                     | Re-establish a previously deleted replication between 2 volumes that have a common ad-hoc or policy-based snapshots x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_ReestablishReplication.json                                                                                                                        |
| [volumesRelocateSample.js][volumesrelocatesample]                                                 | Relocates volume to a new stamp x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_Relocate.json                                                                                                                                                                                                                          |
| [volumesReplicationStatusSample.js][volumesreplicationstatussample]                               | Get the status of the replication x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_ReplicationStatus.json                                                                                                                                                                                                               |
| [volumesResetCifsPasswordSample.js][volumesresetcifspasswordsample]                               | Reset cifs password from volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_ResetCifsPassword.json                                                                                                                                                                                                                 |
| [volumesResyncReplicationSample.js][volumesresyncreplicationsample]                               | Resync the connection on the destination volume. If the operation is ran on the source volume it will reverse-resync the connection and sync from destination to source. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_ResyncReplication.json                                                                        |
| [volumesRevertRelocationSample.js][volumesrevertrelocationsample]                                 | Reverts the volume relocation process, cleans up the new volume and starts using the former-existing volume. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_RevertRelocation.json                                                                                                                                     |
| [volumesRevertSample.js][volumesrevertsample]                                                     | Revert a volume to the snapshot specified in the body x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_Revert.json                                                                                                                                                                                                      |
| [volumesSplitCloneFromParentSample.js][volumessplitclonefromparentsample]                         | Split operation to convert clone volume to an independent volume. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-01-01-preview/examples/Volumes_SplitClone.json                                                                                                                                                                             |
| [volumesUpdateSample.js][volumesupdatesample]                                                     | Patch the specified volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-03-01/examples/Volumes_Update.json                                                                                                                                                                                                                                 |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node accountsChangeKeyVaultSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env NETAPP_SUBSCRIPTION_ID="<netapp subscription id>" NETAPP_RESOURCE_GROUP="<netapp resource group>" node accountsChangeKeyVaultSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[accountschangekeyvaultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/accountsChangeKeyVaultSample.js
[accountscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/accountsCreateOrUpdateSample.js
[accountsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/accountsDeleteSample.js
[accountsgetchangekeyvaultinformationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/accountsGetChangeKeyVaultInformationSample.js
[accountsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/accountsGetSample.js
[accountslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/accountsListBySubscriptionSample.js
[accountslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/accountsListSample.js
[accountsrenewcredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/accountsRenewCredentialsSample.js
[accountstransitiontocmksample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/accountsTransitionToCmkSample.js
[accountsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/accountsUpdateSample.js
[backuppoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupPoliciesCreateSample.js
[backuppoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupPoliciesDeleteSample.js
[backuppoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupPoliciesGetSample.js
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupPoliciesListSample.js
[backuppoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupPoliciesUpdateSample.js
[backupvaultscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupVaultsCreateOrUpdateSample.js
[backupvaultsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupVaultsDeleteSample.js
[backupvaultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupVaultsGetSample.js
[backupvaultslistbynetappaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupVaultsListByNetAppAccountSample.js
[backupvaultsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupVaultsUpdateSample.js
[backupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupsCreateSample.js
[backupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupsDeleteSample.js
[backupsgetlateststatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupsGetLatestStatusSample.js
[backupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupsGetSample.js
[backupsgetvolumelatestrestorestatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupsGetVolumeLatestRestoreStatusSample.js
[backupslistbyvaultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupsListByVaultSample.js
[backupsunderaccountmigratebackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupsUnderAccountMigrateBackupsSample.js
[backupsunderbackupvaultrestorefilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupsUnderBackupVaultRestoreFilesSample.js
[backupsundervolumemigratebackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupsUnderVolumeMigrateBackupsSample.js
[backupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/backupsUpdateSample.js
[bucketscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/bucketsCreateOrUpdateSample.js
[bucketsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/bucketsDeleteSample.js
[bucketsgeneratecredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/bucketsGenerateCredentialsSample.js
[bucketsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/bucketsGetSample.js
[bucketslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/bucketsListSample.js
[bucketsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/bucketsUpdateSample.js
[netappresourcecheckfilepathavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceCheckFilePathAvailabilitySample.js
[netappresourcechecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceCheckNameAvailabilitySample.js
[netappresourcecheckquotaavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceCheckQuotaAvailabilitySample.js
[netappresourcequerynetworksiblingsetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceQueryNetworkSiblingSetSample.js
[netappresourcequeryregioninfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceQueryRegionInfoSample.js
[netappresourcequotalimitsaccountgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceQuotaLimitsAccountGetSample.js
[netappresourcequotalimitsaccountlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceQuotaLimitsAccountListSample.js
[netappresourcequotalimitsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceQuotaLimitsGetSample.js
[netappresourcequotalimitslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceQuotaLimitsListSample.js
[netappresourceregioninfosgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceRegionInfosGetSample.js
[netappresourceregioninfoslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceRegionInfosListSample.js
[netappresourceupdatenetworksiblingsetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceUpdateNetworkSiblingSetSample.js
[netappresourceusagesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceUsagesGetSample.js
[netappresourceusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/netAppResourceUsagesListSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/operationsListSample.js
[poolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/poolsCreateOrUpdateSample.js
[poolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/poolsDeleteSample.js
[poolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/poolsGetSample.js
[poolslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/poolsListSample.js
[poolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/poolsUpdateSample.js
[snapshotpoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotPoliciesCreateSample.js
[snapshotpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotPoliciesDeleteSample.js
[snapshotpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotPoliciesGetSample.js
[snapshotpolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotPoliciesListSample.js
[snapshotpolicieslistvolumessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotPoliciesListVolumesSample.js
[snapshotpoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotPoliciesUpdateSample.js
[snapshotscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotsCreateSample.js
[snapshotsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotsDeleteSample.js
[snapshotsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotsGetSample.js
[snapshotslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotsListSample.js
[snapshotsrestorefilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotsRestoreFilesSample.js
[snapshotsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/snapshotsUpdateSample.js
[subvolumescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/subvolumesCreateSample.js
[subvolumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/subvolumesDeleteSample.js
[subvolumesgetmetadatasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/subvolumesGetMetadataSample.js
[subvolumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/subvolumesGetSample.js
[subvolumeslistbyvolumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/subvolumesListByVolumeSample.js
[subvolumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/subvolumesUpdateSample.js
[volumegroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumeGroupsCreateSample.js
[volumegroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumeGroupsDeleteSample.js
[volumegroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumeGroupsGetSample.js
[volumegroupslistbynetappaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumeGroupsListByNetAppAccountSample.js
[volumequotarulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumeQuotaRulesCreateSample.js
[volumequotarulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumeQuotaRulesDeleteSample.js
[volumequotarulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumeQuotaRulesGetSample.js
[volumequotaruleslistbyvolumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumeQuotaRulesListByVolumeSample.js
[volumequotarulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumeQuotaRulesUpdateSample.js
[volumesauthorizeexternalreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesAuthorizeExternalReplicationSample.js
[volumesauthorizereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesAuthorizeReplicationSample.js
[volumesbreakfilelockssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesBreakFileLocksSample.js
[volumesbreakreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesBreakReplicationSample.js
[volumescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesCreateOrUpdateSample.js
[volumesdeletereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesDeleteReplicationSample.js
[volumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesDeleteSample.js
[volumesfinalizeexternalreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesFinalizeExternalReplicationSample.js
[volumesfinalizerelocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesFinalizeRelocationSample.js
[volumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesGetSample.js
[volumeslistgetgroupidlistforldapusersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesListGetGroupIdListForLdapUserSample.js
[volumeslistquotareportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesListQuotaReportSample.js
[volumeslistreplicationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesListReplicationsSample.js
[volumeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesListSample.js
[volumespeerexternalclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesPeerExternalClusterSample.js
[volumesperformreplicationtransfersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesPerformReplicationTransferSample.js
[volumespoolchangesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesPoolChangeSample.js
[volumespopulateavailabilityzonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesPopulateAvailabilityZoneSample.js
[volumesreinitializereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesReInitializeReplicationSample.js
[volumesreestablishreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesReestablishReplicationSample.js
[volumesrelocatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesRelocateSample.js
[volumesreplicationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesReplicationStatusSample.js
[volumesresetcifspasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesResetCifsPasswordSample.js
[volumesresyncreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesResyncReplicationSample.js
[volumesrevertrelocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesRevertRelocationSample.js
[volumesrevertsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesRevertSample.js
[volumessplitclonefromparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesSplitCloneFromParentSample.js
[volumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v21/javascript/volumesUpdateSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-netapp?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/netapp/arm-netapp/README.md
