sdk/netapp/arm-netapp/samples/v22/javascript/README.md
# @azure/arm-netapp client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-netapp in some common scenarios.

| **File Name**                                                                                     | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| ------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [accountsChangeKeyVaultSample.js][accountschangekeyvaultsample]                                   | affects existing volumes that are encrypted with Key Vault/Managed HSM, and new volumes. Supports HSM to Key Vault, Key Vault to HSM, HSM to HSM and Key Vault to Key Vault. x-ms-original-file: 2025-12-01/Accounts_ChangeKeyVault.json                                                                                                                                                                                                                                                                                                                                       |
| [accountsCreateOrUpdateSample.js][accountscreateorupdatesample]                                   | create or update the specified NetApp account within the resource group x-ms-original-file: 2025-12-01/Accounts_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [accountsDeleteSample.js][accountsdeletesample]                                                   | delete the specified NetApp account x-ms-original-file: 2025-12-01/Accounts_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [accountsGetChangeKeyVaultInformationSample.js][accountsgetchangekeyvaultinformationsample]       | contains data from encryption.keyVaultProperties as well as information about which private endpoint is used by each encryption sibling set. Response from this endpoint can be modified and used as request body for POST request. x-ms-original-file: 2025-12-01/Accounts_GetChangeKeyVaultInformation.json                                                                                                                                                                                                                                                                  |
| [accountsGetSample.js][accountsgetsample]                                                         | get the NetApp account x-ms-original-file: 2025-12-01/Accounts_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [accountsListBySubscriptionSample.js][accountslistbysubscriptionsample]                           | list and describe all NetApp accounts in the subscription. x-ms-original-file: 2025-12-01/Accounts_ListBySubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [accountsListSample.js][accountslistsample]                                                       | list and describe all NetApp accounts in the resource group. x-ms-original-file: 2025-12-01/Accounts_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [accountsRenewCredentialsSample.js][accountsrenewcredentialssample]                               | renew identity credentials that are used to authenticate to key vault, for customer-managed key encryption. If encryption.identity.principalId does not match identity.principalId, running this operation will fix it. x-ms-original-file: 2025-12-01/Accounts_RenewCredentials.json                                                                                                                                                                                                                                                                                          |
| [accountsTransitionToCmkSample.js][accountstransitiontocmksample]                                 | transitions all volumes in a VNet to a different encryption key source (Microsoft-managed key or Azure Key Vault). Operation fails if targeted volumes share encryption sibling set with volumes from another account. x-ms-original-file: 2025-12-01/Accounts_TransitionEncryptionKey.json                                                                                                                                                                                                                                                                                    |
| [accountsUpdateSample.js][accountsupdatesample]                                                   | patch the specified NetApp account x-ms-original-file: 2025-12-01/Accounts_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [backupPoliciesCreateSample.js][backuppoliciescreatesample]                                       | create a backup policy for Netapp Account x-ms-original-file: 2025-12-01/BackupPolicies_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [backupPoliciesDeleteSample.js][backuppoliciesdeletesample]                                       | delete backup policy x-ms-original-file: 2025-12-01/BackupPolicies_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [backupPoliciesGetSample.js][backuppoliciesgetsample]                                             | get a particular backup Policy x-ms-original-file: 2025-12-01/BackupPolicies_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [backupPoliciesListSample.js][backuppolicieslistsample]                                           | list backup policies for Netapp Account x-ms-original-file: 2025-12-01/BackupPolicies_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [backupPoliciesUpdateSample.js][backuppoliciesupdatesample]                                       | patch a backup policy for Netapp Account x-ms-original-file: 2025-12-01/BackupPolicies_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [backupVaultsCreateOrUpdateSample.js][backupvaultscreateorupdatesample]                           | create or update the specified Backup Vault in the NetApp account x-ms-original-file: 2025-12-01/BackupVaults_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupVaultsDeleteSample.js][backupvaultsdeletesample]                                           | delete the specified Backup Vault x-ms-original-file: 2025-12-01/BackupVaults_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupVaultsGetSample.js][backupvaultsgetsample]                                                 | get the Backup Vault x-ms-original-file: 2025-12-01/BackupVaults_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupVaultsListByNetAppAccountSample.js][backupvaultslistbynetappaccountsample]                 | list and describe all Backup Vaults in the NetApp account. x-ms-original-file: 2025-12-01/BackupVaults_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [backupVaultsUpdateSample.js][backupvaultsupdatesample]                                           | patch the specified NetApp Backup Vault x-ms-original-file: 2025-12-01/BackupVaults_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [backupsCreateSample.js][backupscreatesample]                                                     | create a backup under the Backup Vault x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupsDeleteSample.js][backupsdeletesample]                                                     | delete a Backup under the Backup Vault x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupsGetLatestStatusSample.js][backupsgetlateststatussample]                                   | get the latest status of the backup for a volume x-ms-original-file: 2025-12-01/Volumes_LatestBackupStatus.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [backupsGetSample.js][backupsgetsample]                                                           | get the specified Backup under Backup Vault. x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [backupsGetVolumeLatestRestoreStatusSample.js][backupsgetvolumelatestrestorestatussample]         | get the latest status of the restore for a volume x-ms-original-file: 2025-12-01/Volumes_LatestRestoreStatus.json                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [backupsListByVaultSample.js][backupslistbyvaultsample]                                           | list all backups Under a Backup Vault x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [backupsUnderAccountMigrateBackupsSample.js][backupsunderaccountmigratebackupssample]             | migrate the backups under a NetApp account to backup vault x-ms-original-file: 2025-12-01/BackupsUnderAccount_Migrate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [backupsUnderBackupVaultRestoreFilesSample.js][backupsunderbackupvaultrestorefilessample]         | restore the specified files from the specified backup to the active filesystem x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_SingleFileRestore.json                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [backupsUnderVolumeMigrateBackupsSample.js][backupsundervolumemigratebackupssample]               | migrate the backups under volume to backup vault x-ms-original-file: 2025-12-01/BackupsUnderVolume_Migrate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [backupsUpdateSample.js][backupsupdatesample]                                                     | patch a Backup under the Backup Vault x-ms-original-file: 2025-12-01/BackupsUnderBackupVault_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [netAppResourceCheckFilePathAvailabilitySample.js][netappresourcecheckfilepathavailabilitysample] | check if a file path is available. x-ms-original-file: 2025-12-01/CheckFilePathAvailability.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [netAppResourceCheckNameAvailabilitySample.js][netappresourcechecknameavailabilitysample]         | check if a resource name is available. x-ms-original-file: 2025-12-01/CheckNameAvailability.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [netAppResourceCheckQuotaAvailabilitySample.js][netappresourcecheckquotaavailabilitysample]       | check if a quota is available. x-ms-original-file: 2025-12-01/CheckQuotaAvailability.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [netAppResourceQueryNetworkSiblingSetSample.js][netappresourcequerynetworksiblingsetsample]       | get details of the specified network sibling set. x-ms-original-file: 2025-12-01/NetworkSiblingSet_Query.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [netAppResourceQueryRegionInfoSample.js][netappresourcequeryregioninfosample]                     | provides storage to network proximity and logical zone mapping information. x-ms-original-file: 2025-12-01/RegionInfo.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [netAppResourceQuotaLimitsAccountGetSample.js][netappresourcequotalimitsaccountgetsample]         | get the default, current and usages account quota limit x-ms-original-file: 2025-12-01/NetAppResourceQuotaLimitsAccount_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [netAppResourceQuotaLimitsAccountListSample.js][netappresourcequotalimitsaccountlistsample]       | gets a list of quota limits for all quotas that are under account. Currently PoolsPerAccount is the only one. x-ms-original-file: 2025-12-01/NetAppResourceQuotaLimitsAccount_List.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [netAppResourceQuotaLimitsGetSample.js][netappresourcequotalimitsgetsample]                       | get the default and current quota limit x-ms-original-file: 2025-12-01/NetAppResourceQuotaLimits_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [netAppResourceQuotaLimitsListSample.js][netappresourcequotalimitslistsample]                     | get the default and current limits for quotas x-ms-original-file: 2025-12-01/NetAppResourceQuotaLimits_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [netAppResourceRegionInfosGetSample.js][netappresourceregioninfosgetsample]                       | provides storage to network proximity and logical zone mapping information. x-ms-original-file: 2025-12-01/RegionInfos_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [netAppResourceRegionInfosListSample.js][netappresourceregioninfoslistsample]                     | provides region specific information. x-ms-original-file: 2025-12-01/RegionInfos_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [netAppResourceUpdateNetworkSiblingSetSample.js][netappresourceupdatenetworksiblingsetsample]     | update the network features of the specified network sibling set. x-ms-original-file: 2025-12-01/NetworkSiblingSet_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [netAppResourceUsagesGetSample.js][netappresourceusagesgetsample]                                 | get current subscription usage of the specific type x-ms-original-file: 2025-12-01/Usages_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [netAppResourceUsagesListSample.js][netappresourceusageslistsample]                               | get current subscription usages x-ms-original-file: 2025-12-01/Usages_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [operationsListSample.js][operationslistsample]                                                   | list the operations for the provider x-ms-original-file: 2025-12-01/OperationList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [poolsCreateOrUpdateSample.js][poolscreateorupdatesample]                                         | create or Update a capacity pool x-ms-original-file: 2025-12-01/Pools_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [poolsDeleteSample.js][poolsdeletesample]                                                         | delete the specified capacity pool x-ms-original-file: 2025-12-01/Pools_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [poolsGetSample.js][poolsgetsample]                                                               | get details of the specified capacity pool x-ms-original-file: 2025-12-01/Pools_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [poolsListSample.js][poolslistsample]                                                             | list all capacity pools in the NetApp Account x-ms-original-file: 2025-12-01/Pools_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [poolsUpdateSample.js][poolsupdatesample]                                                         | patch the specified capacity pool x-ms-original-file: 2025-12-01/Pools_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [ransomwareReportsClearSuspectsSample.js][ransomwarereportsclearsuspectssample]                   | clear ransomware suspects for the given Advanced Ransomware Protection report. You should evaluate the report to determine whether the activity is acceptable (false positive) or whether an attack seems malicious. ARP creates snapshots named Anti_ransomware_backup when it detects a potential ransomware threat. You can use one of these ARP snapshots or another snapshot of your volume to restore data", x-ms-original-file: 2025-12-01/RansomwareReports_ClearSuspects.json                                                                                         |
| [ransomwareReportsGetSample.js][ransomwarereportsgetsample]                                       | get details of the specified ransomware report (ARP) ARP reports are created with a list of suspected files when it detects any combination of high data entropy, abnormal volume activity with data encryption, and unusual file extensions. ARP creates snapshots named Anti_ransomware_backup when it detects a potential ransomware threat. You can use one of these ARP snapshots or another snapshot of your volume to restore data. x-ms-original-file: 2025-12-01/RansomwareReports_Get.json                                                                           |
| [ransomwareReportsListSample.js][ransomwarereportslistsample]                                     | list all ransomware reports for the volume Returns a list of the Advanced Ransomware Protection (ARP) reports for the volume. ARP reports are created with a list of suspected files when it detects any combination of high data entropy, abnormal volume activity with data encryption, and unusual file extensions. ARP creates snapshots named Anti_ransomware_backup when it detects a potential ransomware threat. You can use one of these ARP snapshots or another snapshot of your volume to restore data" x-ms-original-file: 2025-12-01/RansomwareReports_List.json |
| [snapshotPoliciesCreateSample.js][snapshotpoliciescreatesample]                                   | create a snapshot policy x-ms-original-file: 2025-12-01/SnapshotPolicies_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [snapshotPoliciesDeleteSample.js][snapshotpoliciesdeletesample]                                   | delete snapshot policy x-ms-original-file: 2025-12-01/SnapshotPolicies_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [snapshotPoliciesGetSample.js][snapshotpoliciesgetsample]                                         | get a snapshot Policy x-ms-original-file: 2025-12-01/SnapshotPolicies_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [snapshotPoliciesListSample.js][snapshotpolicieslistsample]                                       | list snapshot policy x-ms-original-file: 2025-12-01/SnapshotPolicies_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [snapshotPoliciesListVolumesSample.js][snapshotpolicieslistvolumessample]                         | get volumes associated with snapshot policy x-ms-original-file: 2025-12-01/SnapshotPolicies_ListVolumes.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [snapshotPoliciesUpdateSample.js][snapshotpoliciesupdatesample]                                   | patch a snapshot policy x-ms-original-file: 2025-12-01/SnapshotPolicies_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [snapshotsCreateSample.js][snapshotscreatesample]                                                 | create the specified snapshot within the given volume x-ms-original-file: 2025-12-01/Snapshots_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [snapshotsDeleteSample.js][snapshotsdeletesample]                                                 | delete snapshot x-ms-original-file: 2025-12-01/Snapshots_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [snapshotsGetSample.js][snapshotsgetsample]                                                       | get details of the specified snapshot x-ms-original-file: 2025-12-01/Snapshots_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [snapshotsListSample.js][snapshotslistsample]                                                     | list all snapshots associated with the volume x-ms-original-file: 2025-12-01/Snapshots_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [snapshotsRestoreFilesSample.js][snapshotsrestorefilessample]                                     | restore the specified files from the specified snapshot to the active filesystem x-ms-original-file: 2025-12-01/Snapshots_SingleFileRestore.json                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [snapshotsUpdateSample.js][snapshotsupdatesample]                                                 | patch a snapshot x-ms-original-file: 2025-12-01/Snapshots_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [subvolumesCreateSample.js][subvolumescreatesample]                                               | creates a subvolume in the path or clones the subvolume mentioned in the parentPath x-ms-original-file: 2025-12-01/Subvolumes_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [subvolumesDeleteSample.js][subvolumesdeletesample]                                               | delete subvolume x-ms-original-file: 2025-12-01/Subvolumes_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [subvolumesGetMetadataSample.js][subvolumesgetmetadatasample]                                     | get details of the specified subvolume x-ms-original-file: 2025-12-01/Subvolumes_Metadata.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [subvolumesGetSample.js][subvolumesgetsample]                                                     | returns the path associated with the subvolumeName provided x-ms-original-file: 2025-12-01/Subvolumes_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [subvolumesListByVolumeSample.js][subvolumeslistbyvolumesample]                                   | returns a list of the subvolumes in the volume x-ms-original-file: 2025-12-01/Subvolumes_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [subvolumesUpdateSample.js][subvolumesupdatesample]                                               | patch a subvolume x-ms-original-file: 2025-12-01/Subvolumes_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [volumeGroupsCreateSample.js][volumegroupscreatesample]                                           | create a volume group along with specified volumes x-ms-original-file: 2025-12-01/VolumeGroups_Create_Oracle.json                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [volumeGroupsDeleteSample.js][volumegroupsdeletesample]                                           | delete the specified volume group only if there are no volumes under volume group. x-ms-original-file: 2025-12-01/VolumeGroups_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [volumeGroupsGetSample.js][volumegroupsgetsample]                                                 | get details of the specified volume group x-ms-original-file: 2025-12-01/VolumeGroups_Get_Oracle.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [volumeGroupsListByNetAppAccountSample.js][volumegroupslistbynetappaccountsample]                 | list all volume groups for given account x-ms-original-file: 2025-12-01/VolumeGroups_List_Oracle.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [volumeQuotaRulesCreateSample.js][volumequotarulescreatesample]                                   | create the specified quota rule within the given volume x-ms-original-file: 2025-12-01/VolumeQuotaRules_Create.json                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [volumeQuotaRulesDeleteSample.js][volumequotarulesdeletesample]                                   | delete quota rule x-ms-original-file: 2025-12-01/VolumeQuotaRules_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [volumeQuotaRulesGetSample.js][volumequotarulesgetsample]                                         | get details of the specified quota rule x-ms-original-file: 2025-12-01/VolumeQuotaRules_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [volumeQuotaRulesListByVolumeSample.js][volumequotaruleslistbyvolumesample]                       | list all quota rules associated with the volume x-ms-original-file: 2025-12-01/VolumeQuotaRules_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [volumeQuotaRulesUpdateSample.js][volumequotarulesupdatesample]                                   | patch a quota rule x-ms-original-file: 2025-12-01/VolumeQuotaRules_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [volumesAuthorizeExternalReplicationSample.js][volumesauthorizeexternalreplicationsample]         | starts SVM peering and returns a command to be run on the external ONTAP to accept it. Once the SVM have been peered a SnapMirror will be created x-ms-original-file: 2025-12-01/Volumes_AuthorizeExternalReplication.json                                                                                                                                                                                                                                                                                                                                                     |
| [volumesAuthorizeReplicationSample.js][volumesauthorizereplicationsample]                         | authorize the replication connection on the source volume x-ms-original-file: 2025-12-01/Volumes_AuthorizeReplication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [volumesBreakFileLocksSample.js][volumesbreakfilelockssample]                                     | break all the file locks on a volume x-ms-original-file: 2025-12-01/Volumes_BreakFileLocks.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [volumesBreakReplicationSample.js][volumesbreakreplicationsample]                                 | break the replication connection on the destination volume x-ms-original-file: 2025-12-01/Volumes_BreakReplication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [volumesCreateOrUpdateSample.js][volumescreateorupdatesample]                                     | create or update the specified volume within the capacity pool x-ms-original-file: 2025-12-01/Volumes_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [volumesDeleteReplicationSample.js][volumesdeletereplicationsample]                               | delete the replication connection on the destination volume, and send release to the source replication x-ms-original-file: 2025-12-01/Volumes_DeleteReplication.json                                                                                                                                                                                                                                                                                                                                                                                                          |
| [volumesDeleteSample.js][volumesdeletesample]                                                     | delete the specified volume x-ms-original-file: 2025-12-01/Volumes_Delete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [volumesFinalizeExternalReplicationSample.js][volumesfinalizeexternalreplicationsample]           | finalizes the migration of an external volume by releasing the replication and breaking the external cluster peering if no other migration is active. x-ms-original-file: 2025-12-01/Volumes_FinalizeExternalReplication.json                                                                                                                                                                                                                                                                                                                                                  |
| [volumesFinalizeRelocationSample.js][volumesfinalizerelocationsample]                             | finalizes the relocation of the volume and cleans up the old volume. x-ms-original-file: 2025-12-01/Volumes_FinalizeRelocation.json                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [volumesGetSample.js][volumesgetsample]                                                           | get the details of the specified volume x-ms-original-file: 2025-12-01/Volumes_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [volumesListGetGroupIdListForLdapUserSample.js][volumeslistgetgroupidlistforldapusersample]       | returns the list of group Ids for a specific LDAP User x-ms-original-file: 2025-12-01/GroupIdListForLDAPUser.json                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [volumesListQuotaReportSample.js][volumeslistquotareportsample]                                   | get quota report for volume (with filter support) x-ms-original-file: 2025-12-01/Volumes_ListQuotaReport.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [volumesListReplicationsSample.js][volumeslistreplicationssample]                                 | list all replications for a specified volume x-ms-original-file: 2025-12-01/Volumes_ListReplications.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [volumesListSample.js][volumeslistsample]                                                         | list all volumes within the capacity pool x-ms-original-file: 2025-12-01/Volumes_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [volumesPeerExternalClusterSample.js][volumespeerexternalclustersample]                           | starts peering the external cluster for this migration volume x-ms-original-file: 2025-12-01/Volumes_PeerExternalCluster.json                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [volumesPerformReplicationTransferSample.js][volumesperformreplicationtransfersample]             | performs an adhoc replication transfer on a volume with volumeType Migration x-ms-original-file: 2025-12-01/Volumes_PerformReplicationTransfer.json                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [volumesPoolChangeSample.js][volumespoolchangesample]                                             | moves volume to another pool x-ms-original-file: 2025-12-01/Volumes_PoolChange.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [volumesPopulateAvailabilityZoneSample.js][volumespopulateavailabilityzonesample]                 | this operation will populate availability zone information for a volume x-ms-original-file: 2025-12-01/Volumes_PopulateAvailabilityZones.json                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [volumesReInitializeReplicationSample.js][volumesreinitializereplicationsample]                   | re-Initializes the replication connection on the destination volume x-ms-original-file: 2025-12-01/Volumes_ReInitializeReplication.json                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [volumesReestablishReplicationSample.js][volumesreestablishreplicationsample]                     | re-establish a previously deleted replication between 2 volumes that have a common ad-hoc or policy-based snapshots x-ms-original-file: 2025-12-01/Volumes_ReestablishReplication.json                                                                                                                                                                                                                                                                                                                                                                                         |
| [volumesRelocateSample.js][volumesrelocatesample]                                                 | relocates volume to a new stamp x-ms-original-file: 2025-12-01/Volumes_Relocate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [volumesReplicationStatusSample.js][volumesreplicationstatussample]                               | get the status of the replication x-ms-original-file: 2025-12-01/Volumes_ReplicationStatus.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [volumesResetCifsPasswordSample.js][volumesresetcifspasswordsample]                               | reset cifs password from volume x-ms-original-file: 2025-12-01/Volumes_ResetCifsPassword.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [volumesResyncReplicationSample.js][volumesresyncreplicationsample]                               | resync the connection on the destination volume. If the operation is ran on the source volume it will reverse-resync the connection and sync from destination to source. x-ms-original-file: 2025-12-01/Volumes_ResyncReplication.json                                                                                                                                                                                                                                                                                                                                         |
| [volumesRevertRelocationSample.js][volumesrevertrelocationsample]                                 | reverts the volume relocation process, cleans up the new volume and starts using the former-existing volume. x-ms-original-file: 2025-12-01/Volumes_RevertRelocation.json                                                                                                                                                                                                                                                                                                                                                                                                      |
| [volumesRevertSample.js][volumesrevertsample]                                                     | revert a volume to the snapshot specified in the body x-ms-original-file: 2025-12-01/Volumes_Revert.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [volumesSplitCloneFromParentSample.js][volumessplitclonefromparentsample]                         | split operation to convert clone volume to an independent volume. x-ms-original-file: 2025-12-01/Volumes_SplitClone.json                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [volumesUpdateSample.js][volumesupdatesample]                                                     | patch the specified volume x-ms-original-file: 2025-12-01/Volumes_Update.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node accountsChangeKeyVaultSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node accountsChangeKeyVaultSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[accountschangekeyvaultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/accountsChangeKeyVaultSample.js
[accountscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/accountsCreateOrUpdateSample.js
[accountsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/accountsDeleteSample.js
[accountsgetchangekeyvaultinformationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/accountsGetChangeKeyVaultInformationSample.js
[accountsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/accountsGetSample.js
[accountslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/accountsListBySubscriptionSample.js
[accountslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/accountsListSample.js
[accountsrenewcredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/accountsRenewCredentialsSample.js
[accountstransitiontocmksample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/accountsTransitionToCmkSample.js
[accountsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/accountsUpdateSample.js
[backuppoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupPoliciesCreateSample.js
[backuppoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupPoliciesDeleteSample.js
[backuppoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupPoliciesGetSample.js
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupPoliciesListSample.js
[backuppoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupPoliciesUpdateSample.js
[backupvaultscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupVaultsCreateOrUpdateSample.js
[backupvaultsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupVaultsDeleteSample.js
[backupvaultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupVaultsGetSample.js
[backupvaultslistbynetappaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupVaultsListByNetAppAccountSample.js
[backupvaultsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupVaultsUpdateSample.js
[backupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupsCreateSample.js
[backupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupsDeleteSample.js
[backupsgetlateststatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupsGetLatestStatusSample.js
[backupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupsGetSample.js
[backupsgetvolumelatestrestorestatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupsGetVolumeLatestRestoreStatusSample.js
[backupslistbyvaultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupsListByVaultSample.js
[backupsunderaccountmigratebackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupsUnderAccountMigrateBackupsSample.js
[backupsunderbackupvaultrestorefilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupsUnderBackupVaultRestoreFilesSample.js
[backupsundervolumemigratebackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupsUnderVolumeMigrateBackupsSample.js
[backupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/backupsUpdateSample.js
[netappresourcecheckfilepathavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceCheckFilePathAvailabilitySample.js
[netappresourcechecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceCheckNameAvailabilitySample.js
[netappresourcecheckquotaavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceCheckQuotaAvailabilitySample.js
[netappresourcequerynetworksiblingsetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceQueryNetworkSiblingSetSample.js
[netappresourcequeryregioninfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceQueryRegionInfoSample.js
[netappresourcequotalimitsaccountgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceQuotaLimitsAccountGetSample.js
[netappresourcequotalimitsaccountlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceQuotaLimitsAccountListSample.js
[netappresourcequotalimitsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceQuotaLimitsGetSample.js
[netappresourcequotalimitslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceQuotaLimitsListSample.js
[netappresourceregioninfosgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceRegionInfosGetSample.js
[netappresourceregioninfoslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceRegionInfosListSample.js
[netappresourceupdatenetworksiblingsetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceUpdateNetworkSiblingSetSample.js
[netappresourceusagesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceUsagesGetSample.js
[netappresourceusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/netAppResourceUsagesListSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/operationsListSample.js
[poolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/poolsCreateOrUpdateSample.js
[poolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/poolsDeleteSample.js
[poolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/poolsGetSample.js
[poolslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/poolsListSample.js
[poolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/poolsUpdateSample.js
[ransomwarereportsclearsuspectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/ransomwareReportsClearSuspectsSample.js
[ransomwarereportsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/ransomwareReportsGetSample.js
[ransomwarereportslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/ransomwareReportsListSample.js
[snapshotpoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotPoliciesCreateSample.js
[snapshotpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotPoliciesDeleteSample.js
[snapshotpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotPoliciesGetSample.js
[snapshotpolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotPoliciesListSample.js
[snapshotpolicieslistvolumessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotPoliciesListVolumesSample.js
[snapshotpoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotPoliciesUpdateSample.js
[snapshotscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotsCreateSample.js
[snapshotsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotsDeleteSample.js
[snapshotsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotsGetSample.js
[snapshotslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotsListSample.js
[snapshotsrestorefilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotsRestoreFilesSample.js
[snapshotsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/snapshotsUpdateSample.js
[subvolumescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/subvolumesCreateSample.js
[subvolumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/subvolumesDeleteSample.js
[subvolumesgetmetadatasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/subvolumesGetMetadataSample.js
[subvolumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/subvolumesGetSample.js
[subvolumeslistbyvolumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/subvolumesListByVolumeSample.js
[subvolumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/subvolumesUpdateSample.js
[volumegroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumeGroupsCreateSample.js
[volumegroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumeGroupsDeleteSample.js
[volumegroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumeGroupsGetSample.js
[volumegroupslistbynetappaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumeGroupsListByNetAppAccountSample.js
[volumequotarulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumeQuotaRulesCreateSample.js
[volumequotarulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumeQuotaRulesDeleteSample.js
[volumequotarulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumeQuotaRulesGetSample.js
[volumequotaruleslistbyvolumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumeQuotaRulesListByVolumeSample.js
[volumequotarulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumeQuotaRulesUpdateSample.js
[volumesauthorizeexternalreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesAuthorizeExternalReplicationSample.js
[volumesauthorizereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesAuthorizeReplicationSample.js
[volumesbreakfilelockssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesBreakFileLocksSample.js
[volumesbreakreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesBreakReplicationSample.js
[volumescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesCreateOrUpdateSample.js
[volumesdeletereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesDeleteReplicationSample.js
[volumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesDeleteSample.js
[volumesfinalizeexternalreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesFinalizeExternalReplicationSample.js
[volumesfinalizerelocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesFinalizeRelocationSample.js
[volumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesGetSample.js
[volumeslistgetgroupidlistforldapusersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesListGetGroupIdListForLdapUserSample.js
[volumeslistquotareportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesListQuotaReportSample.js
[volumeslistreplicationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesListReplicationsSample.js
[volumeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesListSample.js
[volumespeerexternalclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesPeerExternalClusterSample.js
[volumesperformreplicationtransfersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesPerformReplicationTransferSample.js
[volumespoolchangesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesPoolChangeSample.js
[volumespopulateavailabilityzonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesPopulateAvailabilityZoneSample.js
[volumesreinitializereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesReInitializeReplicationSample.js
[volumesreestablishreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesReestablishReplicationSample.js
[volumesrelocatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesRelocateSample.js
[volumesreplicationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesReplicationStatusSample.js
[volumesresetcifspasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesResetCifsPasswordSample.js
[volumesresyncreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesResyncReplicationSample.js
[volumesrevertrelocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesRevertRelocationSample.js
[volumesrevertsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesRevertSample.js
[volumessplitclonefromparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesSplitCloneFromParentSample.js
[volumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v22/javascript/volumesUpdateSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-netapp?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/netapp/arm-netapp/README.md
